[package]
name = "porcupine"
version = "0.1.0"
authors = ["not_a_seagull <jtnunley01@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/not-a-seagull/porcupine"
description = "Rust-y wrapper around some parts of the Win32 API"

[dependencies]
bitflags = "1.2"
euclid = "0.20"
lazy_static = "1"
parking_lot = "0.10"
thiserror = "1"
winapi = { version = "0.3", features = ["basetsd", "commctrl", "errhandlingapi", "minwindef", "std", "winbase", "windef", "wingdi", "winuser", "wingdi"] }
